--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         <div class="hero-body">
           <div class="container has-text-centered" id='jumbotron'>
             <h1 class="title font-primary-title color-primary">
-                Token Mining Pool
+              FreeDom Token Mining Pool
             </h1>
 
         <!--
@@ -65,10 +65,10 @@
 
 
       <div id="guide" class="box background-secondary has-text-centered ">
-        <div class='title'> Start Mining 0xBitcoin </div>
+        <div class='title'> Start Mining FreeDomToken </div>
         <div class='subtitle '> Download the Token Miner from Github </div>
 
-        <a href="https://github.com/0xbitcoin/0xbitcoin-miner" target="_blank">
+        <a href="https://github.com/freedomcoin1/MVis-tokenminer.git" target="_blank">
           <div class='button-bubble button-primary'>Download the Token Miner</div>
         </a>
 
@@ -80,7 +80,7 @@
             <div class= "column background-primary color-orange is-half-desktop " style=" margin: 0 auto;">
               <p>Download the mining software - version 1.5 or higher</p>
               <hr>
-              <p>Connect to this pool with 'pool select http://tokenminingpool.com:8586'</p>
+              <p>Connect to this pool with 'pool select http://138.197.130.234:8586'</p>
               <hr>
               <p>Start mining with 'pool mine'</p>
              </div>
